<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center">

    <ImageView
        android:contentDescription="@string/logo_description"
        android:layout_marginBottom="20dp"
        android:id="@+id/imageView8"
        android:layout_width="238dp"
        android:layout_height="75dp"
        card_view:srcCompat="@drawable/shake_shack_logo" />

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="#86FFE4E4"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="4dp">
        <LinearLayout
            android:id="@+id/summary_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/summary_title"
                android:paddingTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="28sp"
                android:text="@string/summary_title" />

            <TextView
                android:id="@+id/summary_order_details"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:ems="10"
                android:gravity="center"
                android:text="@string/summary_part_1"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/summary_table_for"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:ems="10"
                android:gravity="center"
                android:text="@string/summary_table_for"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/summary_date_time"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:ems="10"
                android:gravity="center"
                android:text="@string/summary_date_time"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/summary_vegan_choice"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:ems="10"
                android:gravity="center"
                android:text="@string/summary_vegan"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/summary_order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete_order"
        android:layout_gravity="center"
        android:textSize="17sp"
        android:layout_marginTop="10dp">
    </Button>

    <Button
        android:id="@+id/go_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/summary_back"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:layout_marginTop="10dp">
    </Button>

    <Button
        android:id="@+id/go_home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_button"
        android:layout_gravity="center"
        android:textSize="17sp"
        android:layout_marginTop="10dp"
        android:visibility="gone">
    </Button>

</LinearLayout>