<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/burgers_title"
            android:textStyle="bold"
            android:paddingBottom="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/burgers_desc"
            android:paddingBottom="10dp"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="8dp"
            card_view:cardBackgroundColor="#E1E1E1"
            card_view:cardElevation="4dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="170dp"
                    android:layout_height="105dp"
                    android:layout_gravity="center"
                    android:cropToPadding="false"
                    android:src="@drawable/white_truffle_burger" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/white_truffle_title"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="342dp"
                    android:layout_height="wrap_content"
                    android:text="@string/white_truffle_desc"
                    android:textSize="15sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="8dp"
            card_view:cardBackgroundColor="#E1E1E1"
            card_view:cardElevation="4dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="170dp"
                    android:layout_height="105dp"
                    android:src="@drawable/white_truffel_shroom"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/white_shroom_title"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="342dp"
                    android:layout_height="wrap_content"
                    android:text="@string/white_shroom_desc"
                    android:textSize="15sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="8dp"
            card_view:cardBackgroundColor="#E1E1E1"
            card_view:cardElevation="4dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="170dp"
                    android:layout_height="105dp"
                    android:src="@drawable/hamburger"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hamburger_title"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="342dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hamburger_desc"
                    android:textSize="15sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/fries_section_title"
            android:textStyle="bold"
            android:paddingBottom="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/fries_section_desc"
            android:paddingBottom="10dp"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="8dp"
            card_view:cardBackgroundColor="#E1E1E1"
            card_view:cardElevation="4dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="170dp"
                    android:layout_height="105dp"
                    android:src="@drawable/fries"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fries_dish_title"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="342dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fries_dish_desc"
                    android:textSize="15sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="8dp"
            card_view:cardBackgroundColor="#E1E1E1"
            card_view:cardElevation="4dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="170dp"
                    android:layout_height="105dp"
                    android:src="@drawable/white_truffle_fries"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/truffle_fries_title"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="342dp"
                    android:layout_height="wrap_content"
                    android:text="@string/truffle_fries_desc"
                    android:textSize="15sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="8dp"
            card_view:cardBackgroundColor="#E1E1E1"
            card_view:cardElevation="4dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="170dp"
                    android:layout_height="105dp"
                    android:src="@drawable/cheese_fries"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cheese_fries_title"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="342dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cheese_fries_desc"
                    android:textSize="15sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/drinks_title"
            android:textStyle="bold"
            android:paddingBottom="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/drinks_desc"
            android:paddingBottom="10dp"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="8dp"
            card_view:cardBackgroundColor="#E1E1E1"
            card_view:cardElevation="4dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="170dp"
                    android:layout_height="105dp"
                    android:src="@drawable/lemonade"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lemonade_title"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="342dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lemonade_desc"
                    android:textSize="15sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="8dp"
            card_view:cardBackgroundColor="#E1E1E1"
            card_view:cardElevation="4dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="170dp"
                    android:layout_height="105dp"
                    android:src="@drawable/fountain_soda"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fountain_soda_title"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="342dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fountain_soda_desc"
                    android:textSize="15sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>
</ScrollView>