<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="#86FFE4E4"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="4dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/order_seats_title"
                android:paddingTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_seats_title"
                android:textAlignment="center"
                android:textSize="26sp" />

            <Button
                android:id="@+id/btnSelectDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textSize="14sp"
                android:text="@string/select_date_button" />

            <TextView
                android:id="@+id/selectedDate"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:ems="10"
                android:gravity="center"
                android:text="@string/no_date_text"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnSelectTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:textSize="14sp"
                android:text="@string/select_time_button" />

            <TextView
                android:id="@+id/SelectedTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/no_time_text"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/editTextNumberDecimal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:gravity="center"
                    android:text="@string/num_people_title"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/numPeopleChoose"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:entries="@array/num_persons" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/veganSectionText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:gravity="center"
                    android:text="@string/vegan_title"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/veganChoice"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:entries="@array/vegan_options" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_button"
        android:layout_gravity="center"
        android:textSize="14sp"
        android:layout_marginTop="10dp">
    </Button>

</LinearLayout>
