<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:contentDescription="@string/logo_description"
        android:id="@+id/imageView"
        android:layout_width="382dp"
        android:layout_height="169dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="162dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/menubutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shake_shack_logo" />

    <Button
        android:id="@+id/menubutton"
        android:layout_width="169dp"
        android:layout_height="62dp"
        android:layout_marginStart="121dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="308dp"
        android:text="@string/menu_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/seatsbutton"
        android:layout_width="169dp"
        android:layout_height="62dp"
        android:layout_marginStart="121dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="208dp"
        android:text="@string/order_seats_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menubutton" />
</androidx.constraintlayout.widget.ConstraintLayout>